log
Thu 28 Mar 2024 02:49:26 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
662cc04
Thu 28 Mar 2024 02:53:38 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
8ea9da6
Thu 28 Mar 2024 02:59:24 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:54: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   40 |         if (list == NULL || list -> current == NULL) return;
      |                                                      ^~~~~~
list.c:39:8: note: declared here
   39 | void * firstList(List * list) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a6ebfc1
